--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autolinker": "^0.22.0",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "vue": "^1.0.10",
-    "webpack": "^1.12.9"
+    "webpack": "^1.12.9",
+    "xss": "^0.2.9"
   }
 }
