--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
+    "firebase": "^2.3.2",
     "vue": "^1.0.10",
     "webpack": "^1.12.9",
     "xss": "^0.2.9"
